--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.54.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "framer-motion": "^11.11.8",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1"
@@ -22,6 +27,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "csv-loader": "^3.0.5",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
